[package]
name = "subimpl"
version = "0.1.0"
edition = "2021"
description = "A procedural macro that generates all the implementations of a type for a struct containing a field of that type."
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.66"
